<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".HomeToDO">

    <item android:id="@+id/action_new" android:title="@string/action_new"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_photo" android:title="@string/action_photo"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_gps" android:title="@string/action_gps"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_json" android:title="@string/action_json"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_net" android:title="@string/action_net"
        android:orderInCategory="100" app:showAsAction="never" />

</menu>
